2007-06-04    <ingwa@dhcp-254-139.lkpg.cendio.se>

	Clean up 
	* src/lib/vectorcomposer.{h,cpp}: use the m_ convention everywhere.

2007-06-04  Murad Tagirov  <tmurad@gmail.com>
    Updated class diagram
    Added folder for KML objects relates classes
    Added base classes for KML: KMLObject, KMLObject

Murad, this should look like:

	Add initial KML classes
	* src/lib/kml: new subdirectory
	* src/lib/kml/KMLObject.{h,cpp}: new file
	* src/lib/kml/KMLFeature.{h,cpp}: new file
	
2007-06-04  Inge Wallin  <inge@lysator.liu.se>

	Improve apidox
	* src/lib/MarbleModel.h (): Improve apidox
	* src/lib/MarbleWidget.h (): Improve apidox

2007-06-04  Osterfeld

	Remove #ifndef Q_OS_MACX surrounding #include .moc
	* Almost all files: Remove surrounding #nfndef

2007-06-04  Torsten Rahn  <rahn@kde.org>

	* Adding more options for the Qt-Designer plugin
	  (later on to be integrated with the Legend in Marble).

2007-06-03  Inge Wallin  <inge@lysator.liu.se>

	APIDOX
	* src/lib/MarbleWidget.h: Finish APIDOX.
	* src/lib/MarbleWidget.cpp: small naming

	APIDOX
	* src/lib/MarbleWidget.h: Document everything but the slots.

	Fix compile error
	* src/plugins/marblewidget/MarbleWidgetPlugin.cpp (createWidget):
	Use MarbleModel instead of KAtlasGlobe.

2007-06-02  Inge Wallin  <inge@lysator.liu.se>

	Improve integration between MarbleControlBox and MarbleWidget
	* src/MarbleControlBox.h (m_widget): new member
	* src/MarbleControlBox.cpp (addMarbleWidget): New method
	* src/katlascontrol.cpp (KAtlasControl): use addMarbleWidget
	instead of connecting signals/slots ourselves

	Make a standalone widget that creates its own model
	* src/lib/MarbleWidget.cpp (MarbleWidget(parent)): new constructor
	(construct): New method
	* src/katlascontrol.cpp (KAtlasControl): Use new constructor for
	MarbleWidget
	* src/katlascontrol.h (KAtlasControl::m_marbleModel): removed

	Rename KatlasGlobe -> MarbleModel
	* src/lib/MarbleModel.h (): renamed from katlasglobe.h